<resources>
    <string name="app_name">Kushall</string>
    <string name="add_device">Add New Device</string>
    <string name="choose_your_device">Select Your New Kushall Device</string>
    <string name="cancel">Cancel</string>
    <string name="select_wifi">Select Wi-Fi Network</string>
    <string name="room">Room</string>
    <string name="bedroom">Bedroom</string>
    <string name="home">Home</string>
    <string name="proceed">Proceed</string>
    <string name="password">Password</string>
    <string name="connect">Connect</string>
    <string name="connecting_a_device">Connecting a device...</string>
    <string name="this_may_take_a_moment">This may take a moment...</string>
    <string name="searching_for_new_kushall_device">Searching For New Kushall Device</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="kushall">Kushall</string>
    <string name="login_to_your_account">Login To Your Account</string>
    <string name="email">Email-Id</string>
    <string name="enter_your_password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Sign In</string>
    <string name="register">Sign Up</string>
    <string name="title">Enter Email-Id To Get Unique Verification Code</string>
    <string name="get_verification_code">Get Verification Code</string>
    <string name="otp">Enter Verification Code</string>
    <string name="resend">A Verification code Is Sent To Your Email-Id : </string>
    <string name="resendOtp">Timeout In : </string>
    <string name="resend_verification_code">Resend Verification Code</string>
    <string name="reset_password">Reset Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password_error">Password must contain a uppercase and lowercase letter, numbers and symbols such as !#$% </string>
    <string name="create_account">Create Account</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="terms"><![CDATA[I agree with <u> Privacy Policy </u> & <u> Terms Of Use</u> ]]></string>
    <string name="title_activity_home">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_favourites">Favourites</string>
    <string name="title_scheduler">Scheduler</string>
    <string name="title_settings">Settings</string>
    <string name="title_location">Select Location</string>
    <string name="title_activity_dashboard">MainActivity</string>
    <string name="title_activity_room">Select Room</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="set_up_device">Add New Device</string>

    <string name="confirm_password_error">Please Enter Confirm Password.</string>
    <string name="new_passowrd_error">Please Enter Your New Password.</string>

    <string name="password_confirm_does_not_match_error">Password Does Not Match.</string>

    <string name="email_id_err">Please Enter Email Id</string>
    <string name="pass_err">Please Enter Password</string>
    <string name="mobile_number_error">Please Enter Your Mobile Number.</string>
    <string name="mobile_number_error_valid">Please Enter At Least 6 Digit Mobile Number.</string>
    <string name="email_id_valid_error">Please Enter Valid Email Id.</string>
    <string name="otp_error">Please Enter OTP.</string>
    <string name="otp_valid_error">Please Enter Valid OTP.</string>
    <string name="first_name_error">Please Enter Your First Name.</string>
    <string name="last_name_error">Please Enter Your Last Name.</string>
    <string name="mobile_number_valid_error">Please Enter At Least 6 Digit Mobile Number.</string>

    <string name="something_went_wrong">Something Went Wrong PLease Try Later</string>
    <string name="error_internet">Please Check Your Internet Connection</string>
    <string name="error_exception">Some Exception Occurred</string>
    <string name="terms_error"><![CDATA[Please Select Terms & Conditions]]></string>
    <string name="add_location">Add New Location</string>
    <string name="enter_location">Enter Location</string>
    <string name="add_location_error">Please Select Location</string>
    <string name="location">Location |  </string>
    <string name="devices">Devices</string>
    <string name="rooms">Rooms</string>
    <string name="add_room_error">Please Select Room</string>
    <string name="set_friendly_name_to_switches">Set Friendly Name To Switches</string>
    <string name="connecting_msg">Opening Kushall Device Connections…</string>
    <string name="tvMsg">Sharing Wifi credentials with Kushall Device…</string>
    <string name="tvMsg1">Checking for Kushall Device on Wifi-Network....</string>
    <string name="tvMsg2">Setting up your Kushall Device…</string>
    <string name="tvMsg3">Adding Kushall Device to your account…</string>
    <string name="log_out">Log Out</string>
</resources>