<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/qa_home_inactive"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_scheduler"
        android:icon="@drawable/qa_scheduler_inactive"
        android:title="@string/title_scheduler" />

    <item
        android:id="@+id/navigation_favourites"
        android:icon="@drawable/qa_favorites_inactive"
        android:title="@string/title_favourites" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/qa_settings_inactive"
        android:title="@string/title_settings" />
</menu>