<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.homeautomation.Activities.Fragments.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >

        <action
            android:id="@+id/action_navigation_home_to_navigation_favourites"
            app:destination="@id/navigation_favourites" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_scheduler"
            app:destination="@id/navigation_scheduler" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_settings"
            app:destination="@id/navigation_settings" />
    </fragment>

    <fragment
        android:id="@+id/navigation_scheduler"
        android:name="com.homeautomation.Activities.Fragments.SchedulerFragment"
        android:label="@string/title_scheduler"
        tools:layout="@layout/fragment_scheduler" >

    </fragment>


    <fragment
        android:id="@+id/navigation_favourites"
        android:name="com.homeautomation.Activities.Fragments.FavouritesFragment"
        android:label="@string/title_favourites"
        tools:layout="@layout/fragment_favourites" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.homeautomation.Activities.Fragments.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />


</navigation>