<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginStart="@dimen/margin_20"
    android:layout_marginLeft="@dimen/margin_20"
    android:layout_marginEnd="@dimen/margin_20"
    android:layout_marginRight="@dimen/margin_20"
    android:background="@drawable/round_background_filled_white"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linear_device_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvHeading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/margin_10"
            android:layout_marginLeft="@dimen/margin_10"
            android:layout_marginTop="@dimen/margin_30"
            android:layout_marginEnd="@dimen/margin_10"
            android:layout_marginRight="@dimen/margin_10"
            android:layout_marginBottom="@dimen/margin_20"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center_horizontal"
            android:text="@string/choose_your_device"
            android:textColor="#62757F"
            android:textSize="@dimen/text_size_18" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_wifiList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_10"
            tools:listitem="@layout/item_wifi_layout"/>

    </LinearLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linear_add_device"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_20"
        android:orientation="vertical"
        android:visibility="visible">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linear_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="@dimen/margin_10"
            android:layout_marginLeft="@dimen/margin_10"
            android:layout_marginEnd="@dimen/margin_10"
            android:layout_marginRight="@dimen/margin_10"
            android:layout_marginBottom="@dimen/margin_20"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_device"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/roboto_bold"
                android:gravity="center_horizontal"
                android:text="@string/searching_for_new_kushall_device"
                android:textColor="#62757F"
                android:textSize="@dimen/text_size_18" />

            <ProgressBar
                android:id="@+id/pBarCustom"
                android:layout_width="@dimen/margin_24"
                android:layout_height="@dimen/margin_24"
                android:layout_centerInParent="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin_20"
                android:indeterminateTint="#2596CD" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/margin_20"
        android:background="@color/blue_200" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/margin_20"
        android:layout_marginLeft="@dimen/margin_20"
        android:layout_marginTop="@dimen/margin_10"
        android:layout_marginEnd="@dimen/margin_20"
        android:layout_marginRight="@dimen/margin_20"
        android:layout_marginBottom="@dimen/margin_20"
        android:fontFamily="@font/roboto_regular"
        android:gravity="center_horizontal"
        android:text="@string/cancel"
        android:textColor="#62757F"
        android:textSize="@dimen/text_size_16" />

</androidx.appcompat.widget.LinearLayoutCompat>